--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
       <!-- Footer -->
 <footer class="page-footer font-small unique-color-dark">
 
-        <div style="background-color: red;">
+        <div style="background-color: #6153CC;">
           <div class="container">
     
             <!-- Grid row-->
