--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
      <div class="col-md-6">
         <h5 class="app-h">1. Review your Business</h5>
         <p class="app-text">
-          At Pacxa, we begin by getting to know you. This helps us identify how we can help you maximize your potential—whether it’s through scalable services,
+          At Redpages, we begin by getting to know you. This helps us identify how we can help you maximize your potential—whether it’s through scalable services,
           reducing “hardware sprawl” or moving your business toward greater innovation.
           We also want to know where IT fits into your day—can we take it off your hands, or do you prefer to be involved?</p>
      </div>
