--- a/index.html
+++ b/index.html
@@ -264,18 +264,7 @@
               <!-- Links -->
               <h6 class="text-uppercase font-weight-bold">Useful links</h6>
               <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-              <p>
-                <a href="#" class="text-white">Your Account</a>
-              </p>
-              <p>
-                <a href="#" class="text-white">Become an Affiliate</a>
-              </p>
-              <p>
-                <a href="#" class="text-white">Shipping Rates</a>
-              </p>
-              <p>
-                <a href="#" class="text-white">Help</a>
-              </p>
+              <a class="twitter-timeline" href="https://twitter.com/OracleCloud?ref_src=twsrc%5Etfw" height="100">Tweets by OracleCloud</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     
             </div>
             <!-- Grid column -->
