--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 </style>
 
 <div class="container slides">
-    <h2>Our Customers</h2>
+    <h2 class="about-us">Our Customers</h2>
      <section class="customer-logos slider">
         <div class="slide"><img src="https://res.cloudinary.com/okoyecb/image/upload/v1540814751/FIRS_s9qgj2.jpg"></div>
         <div class="slide"><img src="https://res.cloudinary.com/okoyecb/image/upload/v1540814738/AIICO_Logo_1_nz6ovs.jpg"></div>
